feat: Integrate global settings and localization
This commit introduces several enhancements to the RMG editor:

- **Global Settings Modal:** A dedicated modal for managing global map settings (rules, layouts, variants, content, raw) is now implemented.
- **Localization Integration:** Localization utilities are added, including support for game modes, win conditions, and template descriptions. This enables dynamic translation of UI elements based on loaded language data.
- **Property Editor Enhancements:** The Property Editor now includes the option to open global settings, facilitating easier navigation and modification of map-wide configurations.
- **Map Info Panel Updates:** The Map Info Panel now displays game modes and win conditions, with a dedicated button to access global settings for these aspects.

These changes improve the editor's usability and flexibility by centralizing global configurations and providing better language support.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     "electron": "https://aistudiocdn.com/electron@^39.2.5",
     "d3": "https://aistudiocdn.com/d3@^7.9.0",
     "esbuild": "https://aistudiocdn.com/esbuild@^0.27.1",
-    "fs": "https://aistudiocdn.com/fs@^0.0.1-security"
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.1"
   }
 }
 </script>
